# polymarket-history-viewer

./: .gitignore  README.md  _csv_diag.py  _diagnose_pnl.py  _full_fetch.py  _prove_asymmetry.py  _week_check.py  app.py  data_loader.py  data_processor.py  pyproject.toml
.github/: copilot-instructions.md
.mex/: ROUTER.md  SETUP.md  config.json
.mex/context/: api-limits.md  architecture.md  conventions.md  decisions.md  dedup-pagination-fix.md  setup.md  stack.md
.mex/patterns/: INDEX.md  dedup-by-txhash.md  streamlit-multiselect-all-filter.md  time-presets-api-fetch.md  time-window-asymmetry.md
.mex/session/: pnl-accuracy-fix.md
.mex/spec/: pnl-distribution-chart.md
.streamlit/: config.toml
cache/: .gitkeep
data/: .gitkeep
data/noble-tree/: Polymarket-History-2026-06-18.csv
example-data/noble-tree/: Polymarket-History-2026-06-19.csv
worker/: _fix_escaping.py  _write_html.mjs  schema.sql  wrangler.toml
worker/.wrangler/cache/: cf.json
worker/.wrangler/state/v3/cache/miniflare-CacheObject/: metadata.sqlite-shm  metadata.sqlite-wal
worker/.wrangler/state/v3/kv/miniflare-KVNamespaceObject/: metadata.sqlite-shm  metadata.sqlite-wal
worker/public/: index.html
worker/src/: AGENTS.md  ai.js  data.js  html.js  index.js
